--- a/styles/index.css
+++ b/styles/index.css
@@ -1,55 +1,146 @@
-:root{
-    --dark-color: #343A40;
-    --middle-color: #495057;
-    --teal-color: #67808E;
-    --light-color: #F3F5FC;
-    --primary-color: #0A3871;
-    font-family: 'Poppins', sans-serif;
+:root {
+  --dark-color: #343a40;
+  --middle-color: #495057;
+  --teal-color: #67808e;
+  --light-color: #f3f5fc;
+  --primary-color: #0a3871;
+  font-family: "Poppins", sans-serif;
 }
 
-.app__container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: var(--light-color);
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-    box-sizing: border-box;
-    padding: 20px;
+.app__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-color: var(--light-color);
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+  box-sizing: border-box;
+  padding: 20px;
 }
-.app__title{
+.app__title {
+  font-size: 2rem;
+  color: var(--dark-color);
+  margin: 30px auto;
+  width: 100%;
+  text-align: center;
+}
+
+.app__input-text {
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  max-width: 400px;
+  height: 400px;
+  border: none;
+  resize: none;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  outline: none;
+  box-sizing: border-box;
+  margin: 0 auto;
+  background-color: var(--light-color);
+}
+
+.app__input-text::placeholder {
+  color: var(--primary-color);
+  font-size: 2rem;
+}
+
+.alert__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.alert-ico {
+  color: var(--primary-color);
+  margin-bottom: 1rem;
+  margin: 0 5px;
+}
+
+.alert__container span {
+  font-size: 1.5rem;
+  color: var(--dark-color);
+  margin-bottom: 1rem;
+}
+
+.app__actions {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  box-sizing: border-box;
+  padding: 20px;
+  height: 40%;
+}
+
+.app__action {
+    margin: 20px auto;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border-radius: 32px;
+    box-sizing: border-box;
+    padding: 30px;
+    cursor: pointer;
+}
+
+.app__action--encrypt {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  border: none;
+}
+.app__action--decrypt {
+  background-color: var(--light-color);
+  color: var(--primary-color);
+  border: solid 3px var(--primary-color);
+}
+.app__action-text {
+  font-size: 1.5rem;
+  text-align: center;
+  width: 100%;
+}
+
+.app__output {
+    font-family: "Poppins", sans-serif;
+    width: 100%;
+    height: 300px;
+    border-radius: 32px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 20px auto;
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0 10px 10px var(--teal-color);
+    color: var(--primary-color);
+    text-align: center;
+}
+
+.app__output-title{
     font-size: 2rem;
     color: var(--dark-color);
     margin-bottom: 1rem;
+    font-weight: 700;
 }
-
-.app__input-text{
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
-    max-width: 400px;
-    height: 100vh;
-    border: none;
-    resize: none;
-    font-size: 2rem;
+.app__output-paragraph{
+    font-size: 1.5rem;
+    color: var(--middle-color);
     margin-bottom: 1rem;
-    outline: none;
-    box-sizing: border-box;
-    margin: 0 auto;
-    background-color: var(--light-color);
 }
 
-.app__input-text::placeholder{
-    color: var(--primary-color);
-    font-size: 2rem;
-}
-
-.app__action{
-    display: flex;
-    justify-content: space-between;
+.app__output-text {
+    font-family: "Poppins", sans-serif;
     width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
+    border-radius: 32px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 20px auto;
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0 10px 10px var(--teal-color);
+    color: var(--primary-color);
+}
+
+.hidden-output {
+  display: none;
 }
