--- a/styles/index.css
+++ b/styles/index.css
@@ -104,7 +104,7 @@
 .app__output {
     font-family: "Poppins", sans-serif;
     width: 100%;
-    height: 300px;
+    text-align: center;
     border-radius: 32px;
     padding: 20px;
     box-sizing: border-box;
@@ -113,7 +113,6 @@
     background-color: #ffffff;
     box-shadow: 0 10px 10px var(--teal-color);
     color: var(--primary-color);
-    text-align: center;
 }
 
 .app__output-title{
@@ -137,8 +136,22 @@
     margin: 20px auto;
     border: none;
     background-color: #ffffff;
-    box-shadow: 0 10px 10px var(--teal-color);
+    outline: none;
     color: var(--primary-color);
+    font-size: 2rem;
+}
+
+.app__output-copy-button{
+    font-size: 1.5rem;
+    color: var(--primary-color);
+    width: 100%;    
+    border-radius: 32px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 20px auto;
+    border: solid 3px var(--primary-color);
+    background-color: #ffffff;
+    outline: none;
 }
 
 .hidden-output {
