--- a/styles/index.css
+++ b/styles/index.css
@@ -34,7 +34,7 @@
   height: 400px;
   border: none;
   resize: none;
-  font-size: 2rem;
+  font-size: 1rem;
   margin-bottom: 1rem;
   outline: none;
   box-sizing: border-box;
@@ -44,25 +44,27 @@
 
 .app__input-text::placeholder {
   color: var(--primary-color);
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 .alert__container {
   display: flex;
   flex-direction: row;
+  font-size: .8rem;
   justify-content: space-between;
+  align-items: center;
 }
 
 .alert-ico {
   color: var(--primary-color);
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
   margin: 0 5px;
 }
 
 .alert__container span {
-  font-size: 1.5rem;
+  font-size: .5rem;
   color: var(--dark-color);
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
 }
 
 .app__actions {
@@ -70,18 +72,18 @@
   flex-direction: column;
   width: 100vw;
   box-sizing: border-box;
-  padding: 20px;
-  height: 40%;
+  padding: 10px;
+  height: 10%;
 }
 
 .app__action {
-  margin: 20px auto;
+  margin: 5px auto;
   width: 100%;
   height: 100%;
   outline: none;
   border-radius: 32px;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 10px;
   cursor: pointer;
 }
 
@@ -96,7 +98,7 @@
   border: solid 3px var(--primary-color);
 }
 .app__action-text {
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
   width: 100%;
 }
@@ -104,11 +106,12 @@
 .app__output {
   font-family: "Poppins", sans-serif;
   width: 100%;
+  height: fit-content;
   text-align: center;
   border-radius: 32px;
   padding: 20px;
   box-sizing: border-box;
-  margin: 20px auto;
+  margin: 50px 0 0 0;
   border: none;
   background-color: #ffffff;
   box-shadow: 0 10px 10px var(--teal-color);
@@ -118,13 +121,13 @@
   display: none;
 }
 .app__output-title {
-  font-size: 2rem;
+  font-size: 1rem;
   color: var(--dark-color);
   margin-bottom: 1rem;
   font-weight: 700;
 }
 .app__output-paragraph {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: var(--middle-color);
   margin-bottom: 1rem;
 }
@@ -135,20 +138,19 @@
   border-radius: 32px;
   padding: 20px;
   box-sizing: border-box;
-  margin: 20px auto;
   border: none;
   background-color: #ffffff;
   outline: none;
   color: var(--primary-color);
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 .app__output-copy-button {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: var(--primary-color);
   width: 100%;
   border-radius: 32px;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
   margin: 20px auto;
   border: solid 3px var(--primary-color);
@@ -354,13 +356,14 @@
   .app__output-text {
     width: 100%;
     height: 100%;
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .app__output-copy-button {
-    font-size: 2rem;
+    font-size: 1rem;
     color: var(--primary-color);
     width: 100%;
     border-radius: 32px;
     padding: 20px;
+    cursor: pointer;
   }
 }
