--- a/styles/index.css
+++ b/styles/index.css
@@ -192,12 +192,13 @@
     height: fit-content;
     flex-direction: row;
     justify-content: space-between;
+    margin: 0;
   }
   .app__action {
     width: 100%;
     height: 50px;
-    margin: 0 20px;
     display: flex;
+    margin: 0 5px;
     align-items: center;
   }
   .app__action--encrypt {
@@ -216,15 +217,24 @@
     width: 100%;
   }
   .app__output {
+    font-family: "Poppins", sans-serif;
     width: 100%;
-    height: 20%;
+    height: fit-content;
+    text-align: center;
+    border-radius: 32px;
+    padding: 20px;
+    box-sizing: border-box;
     margin: 0;
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0 10px 10px var(--teal-color);
+    color: var(--primary-color);
   }
   .app__output-image {
     display: none;
   }
   .app__output-title {
-    font-size: 2rem;
+    font-size: 1rem;
     color: var(--dark-color);
     margin-bottom: 1rem;
     font-weight: 700;
@@ -234,17 +244,26 @@
     color: var(--middle-color);
     margin-bottom: 1rem;
   }
+  
   .app__output-text {
-    width: 100%;
-    height: 100%;
-    font-size: 3rem;
-  }
-  .app__output-copy-button {
-    font-size: 2rem;
-    color: var(--primary-color);
+    font-family: "Poppins", sans-serif;
     width: 100%;
     border-radius: 32px;
     padding: 20px;
+    box-sizing: border-box;
+    border: none;
+    background-color: #ffffff;
+    outline: none;
+    color: var(--primary-color);
+    font-size: 1rem;
+  }
+  
+  .app__output-copy-button {
+    font-size: 1rem;
+    color: var(--primary-color);
+    width: 100%;
+    border-radius: 32px;
+    padding: 10px;
     box-sizing: border-box;
     margin: 20px auto;
     border: solid 3px var(--primary-color);
@@ -306,6 +325,8 @@
     width: 100%;
     height: 25px;
     margin: 0 20px;
+    font-size: 1rem;
+    padding: 20px;
     display: flex;
     align-items: center;
   }
@@ -363,7 +384,7 @@
     color: var(--primary-color);
     width: 100%;
     border-radius: 32px;
-    padding: 20px;
+    padding: 10px;
     cursor: pointer;
   }
 }
